Fixed menu icon to show only on mobile and page links on larger screens.

--- a/src/components/Home/Specialties/Specialties.module.css
+++ b/src/components/Home/Specialties/Specialties.module.css
@@ -34,9 +34,10 @@
 }
 
 
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .boxes {
     display: block;
+    overflow: hidden;
   }
 
   .box {
